welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: ')' expected but integer literal found.
	if (talking && (hour<= || hour>=20)){
                                        ^parotTrouble:7: error: ')' expected but '}' found.
}
^